fixed spacing between navitems

--- a/booking-app/src/App.css
+++ b/booking-app/src/App.css
@@ -79,8 +79,8 @@ li hr {
   }
 
   .nav-item {
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 40px;
+    margin-right: 40px;
   }
 }
 
